Bug #13758: Secure xml handling